# moto-flip-finder

./: .gitignore  README.md  pyproject.toml
data/processed/: all_gsxr.json  damaged_candidates.json  damaged_evaluations.json  gsxr_ai_analysis.json  gsxr_ai_top_candidates.json  healthy_comps.json  top_deals.json
data/raw/: olx_gsxr_20260330T175429Z_records.json  olx_gsxr_20260330T182527Z_details.json  olx_gsxr_20260330T183104Z_details.json  olx_gsxr_20260330T183658Z_details.json  olx_gsxr_20260330T183910Z_details.json  olx_gsxr_20260330T184937Z_details.json
docs/: roadmap.md
src/moto_flip_finder/: build_datasets.py  build_ready_motorcycles_dataset.py  damage_analysis.py  deal_evaluator.py  description_analysis_provider.py  evaluate_damaged_listings.py  gsxr_ai_analysis.py  main.py  market_value.py  models.py  motorcycle_listing_validation.py  parser.py  price_model.py  profit.py  ready_price_report.py  repair_estimator.py  run_brand_price_pipeline.py  sample_data.py  torch_price_model.py  train_price_model.py  train_ready_price_model.py
tests/: test_build_datasets.py  test_build_ready_motorcycles_dataset.py  test_damage_analysis.py  test_deal_evaluator.py  test_evaluate_damaged_listings.py  test_gsxr_ai_analysis.py  test_main.py  test_market_value.py  test_motorcycle_listing_validation.py  test_olx_import_details.py  test_olx_import_search.py  test_olx_motorcycles_details.py  test_olx_motorcycles_search.py  test_placeholder.py  test_price_model.py  test_ready_price_report.py  test_repair_estimator.py  test_run_brand_price_pipeline.py
(+6 files in other folders)
