[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moto-flip-finder"
version = "0.1.0"
description = "AI-assisted system for finding undervalued damaged motorcycles"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
