[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moto-flip-finder"
version = "0.1.0"
description = "AI-assisted system for finding undervalued damaged motorcycles"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
