[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moto-flip-finder"
version = "1.0.0"
description = "ML pipeline for scraping, valuing, and ranking motorcycle listings"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "joblib>=1.4.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]

[project.scripts]
moto-flip-finder = "moto_flip_finder.main:main"

[tool.setuptools.packages.find]
where = ["src"]
